[components] fix avatar alignment issue in global presence

--- a/packages/@sanity/components/src/presence/PopoverList.css
+++ b/packages/@sanity/components/src/presence/PopoverList.css
@@ -13,6 +13,7 @@
   font: inherit;
   padding: 0;
   color: inherit;
+  align-items: center;
 }
 
 .globalButton {
